--- a/cadastro-usuarios/src/index.css
+++ b/cadastro-usuarios/src/index.css
@@ -8,6 +8,6 @@
 body{
   min-height: 100vh;
   width: 100vw;
-  background: #283618;
+  background: linear-gradient(135deg, #0f0b25 0%, #1a1a2e 100%);
 }
 
